# 20251108IntroStellarBootcamp2026CapIV

./: .gitignore  README.md  kotlinc.sh  settings.gradle.kts  stellar.sh
app/src/main/kotlin/org/example/app/: App.kt  StellarService.kt
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: buildlogic.kotlin-common-conventions.gradle.kts
contract/get_set_helloworld/: README.md
contract/get_set_helloworld/contracts/get_set_message/: Cargo.toml
contract/get_set_helloworld/contracts/get_set_message/src/: lib.rs
examples-SDK/rust/: Cargo.toml
examples-SDK/rust/src/: main.rs
web/get_set/: README.md
