[package]
name = "soroban_rust_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# CORRECCIÓN FINAL: El nombre del paquete es 'soroban-sdk'.
soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk", features = ["next", "rpc"] }
# stellar_strkey es un paquete separado, lo obtenemos de crates.io.
stellar_strkey = "0.0.8"

# Crates de propósito general.
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"